Added Base Page Skeleton

--- a/index.html
+++ b/index.html
@@ -9,5 +9,24 @@
     </head>
     <body>
 
+        <div class="left">
+            <div class="imgAttribution">
+                Photo by
+                <a href="https://unsplash.com/@zelladun">Fachry Zella Devandra</a>
+                on
+                <a href="https://unsplash.com/photos/Yta-zdP9PVM">Unsplash</a>
+
+            </div>
+        </div>
+
+        <div class="right">
+
+        </div>
+
+        <div class="footer">
+            <div>
+                Copyright &copy; The Odin Project - Aadil Edition
+            </div>
+        </div>
     </body>
 </html>
