Added Left Side Style and Info

--- a/index.html
+++ b/index.html
@@ -8,24 +8,26 @@
         <script src="app.js" defer></script>
     </head>
     <body>
-
         <div class="left">
-            <div class="imgAttribution">
-                Photo by
-                <a href="https://unsplash.com/@zelladun">Fachry Zella Devandra</a>
-                on
-                <a href="https://unsplash.com/photos/Yta-zdP9PVM">Unsplash</a>
-
+            <div class="backImg">
+                <div></div> <!--To Force Elements to spread properly coz of relative title-->
+                <div class="title">
+                    <img src="dola.png" alt="Logo" class="titleLogo"></img>
+                    <div class="titleText">Yadola</div>
+                </div>
+                <div class="imgAttribution">
+                    Photo by
+                    <a href="https://unsplash.com/@zelladun">Fachry Zella Devandra</a>
+                    on
+                    <a href="https://unsplash.com/photos/Yta-zdP9PVM">Unsplash</a>
+                </div>
             </div>
         </div>
-
         <div class="right">
-
-        </div>
-
-        <div class="footer">
-            <div>
-                Copyright &copy; The Odin Project - Aadil Edition
+            <div class="footer">
+                <div>
+                    Copyright &copy; The Odin Project - Aadil Edition
+                </div>
             </div>
         </div>
     </body>
