Added Right Side Skeleton

--- a/index.html
+++ b/index.html
@@ -24,6 +24,52 @@
             </div>
         </div>
         <div class="right">
+            <div class="formIntro">
+                <div class="info">
+                    If you're looking for a fun way to stay fit and work towards your football goals,
+                    you've come to the right place. With daily and weekly training sessions
+                    led by experienced coaches, our program is designed to help you improve
+                    your skills and have a blast on the field. Join us today and take the first
+                    step towards realizing your football dreams!
+                </div>
+                <div class="cta">You don't want to miss this!</div>
+            </div>
+            <form action="#">
+                <div class="formBody">
+                    <div class="formHeading">Let's GO GET IT!</div>
+                    <div class="inputDiv">
+                        <label for="first-name">First Name</label>
+                        <input type="text" name="first-name" id="first-name" required>
+                    </div>
+                    <div class="inputDiv">
+                        <label for="last-name">Last Name</label>
+                        <input type="text" name="last-name" id="last-name" required>
+                    </div>
+                    <div class="inputDiv">
+                        <label for="email">Email</label>
+                        <input type="email" name="email" id="email" required>
+                    </div>
+                    <div class="inputDiv">
+                        <label for="phone-num">Phone Number</label>
+                        <input type="number" name="phone-num" id="phone-num" required>
+                    </div>
+                    <div class="inputDiv">
+                        <label for="pass">Password</label>
+                        <input type="password" name="pass" id="pass" required>
+                    </div>
+                    <div class="inputDiv">
+                        <label for="conf-pass">Confirm Password</label>
+                        <input type="password" name="conf-pass" id="conf-pass" required>
+                    </div>
+                </div>
+                <button type="submit">Create Account</button>
+                <div class="loginText">
+                    Already have an Account?
+                    <a href="#">
+                        Login
+                    </a>
+                </div>
+            </form>
             <div class="footer">
                 <div>
                     Copyright &copy; The Odin Project - Aadil Edition
