Added Partial Styling on Right Elements

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
         </div>
         <div class="right">
-            <div class="formIntro">
+            <div class="formIntro leftSpace rightSpace">
                 <div class="info">
                     If you're looking for a fun way to stay fit and work towards your football goals,
                     you've come to the right place. With daily and weekly training sessions
@@ -34,7 +34,7 @@
                 </div>
                 <div class="cta">You don't want to miss this!</div>
             </div>
-            <form action="#">
+            <form action="#" class="leftSpace rightSpace">
                 <div class="formBody">
                     <div class="formHeading">Let's GO GET IT!</div>
                     <div class="inputDiv">
