--- a/index.html
+++ b/index.html
@@ -35,31 +35,32 @@
                 <div class="cta">You don't want to miss this!</div>
             </div>
             <form action="#" class="leftSpace rightSpace">
+                <div class="formHeading">Let's GO GET IT!</div>
                 <div class="formBody">
-                    <div class="formHeading">Let's GO GET IT!</div>
                     <div class="inputDiv">
+                        <input type="text" name="first-name" id="first-name" placeholder=" " required>
                         <label for="first-name">First Name</label>
-                        <input type="text" name="first-name" id="first-name" required>
                     </div>
                     <div class="inputDiv">
+                        <input type="text" name="last-name" id="last-name" placeholder=" " required>
                         <label for="last-name">Last Name</label>
-                        <input type="text" name="last-name" id="last-name" required>
                     </div>
                     <div class="inputDiv">
+                        <input type="email" name="email" id="email" placeholder=" " required>
                         <label for="email">Email</label>
-                        <input type="email" name="email" id="email" required>
                     </div>
                     <div class="inputDiv">
+                        <input type="number" name="phone-num" id="phone-num" placeholder=" "
+                               minlength="9" required>
                         <label for="phone-num">Phone Number</label>
-                        <input type="number" name="phone-num" id="phone-num" required>
                     </div>
                     <div class="inputDiv">
+                        <input type="password" name="pass" id="pass" placeholder=" " required>
                         <label for="pass">Password</label>
-                        <input type="password" name="pass" id="pass" required>
                     </div>
                     <div class="inputDiv">
+                        <input type="password" name="conf-pass" id="conf-pass" placeholder=" " required>
                         <label for="conf-pass">Confirm Password</label>
-                        <input type="password" name="conf-pass" id="conf-pass" required>
                     </div>
                 </div>
                 <button type="submit">Create Account</button>
